<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.materialme.DetailActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:clickable="false"
            android:onClick="gobacktomain"
            app:srcCompat="@drawable/backicon" />

        <ImageView
            android:id="@+id/sportsImageDetail"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleDetail"
            android:text="@string/title_placeholder"
            android:padding="8dp"
            android:layout_alignBottom="@id/sportsImageDetail"
            style="@style/TextAppearance.AppCompat.Headline"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/sportsImageDetail"
            android:layout_alignBottom="@+id/sportsImageDetail"
            android:onClick="purchase"
            android:background="@color/gray"
            android:text="@string/buy"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/newsTitleDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sportsImageDetail"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="355dp"
            android:layout_marginRight="355dp"
            android:padding="8dp"
            android:text="@string/news_placeholder"
            android:textColor="?android:textColorSecondary" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTitle"
            android:text="@string/sports_info_placeholder"
            android:padding="8dp"
            android:layout_below="@id/newsTitleDetail"
            style="@style/TextAppearance.AppCompat.Subhead" />

    </RelativeLayout>
</ScrollView>