<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sign_in_imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:clickable="false"
            android:onClick="gobacktomain"
            app:srcCompat="@drawable/backicon" />


    <TextView
        android:id="@+id/enter_email"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/regular"
        android:text="E-mail"
        android:textColor="@color/gray"
        android:paddingLeft="25sp"
        />

    <EditText
        android:id="@+id/ETuser"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/abiyahmed2019_gmail_com"
        android:inputType="textEmailAddress"
        android:layout_alignBottom="@+id/enter_email"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="100sp"
        android:layout_height="20sp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/regular"
        android:text="Password"
        android:textColor="@color/gray"
        android:paddingLeft="25sp"/>

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="*********"
        android:inputType="textPassword"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>



    <Button
        android:id="@+id/btnsignin"
        android:layout_marginLeft="65dp"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="200dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/light"
        android:text="@string/have_no_account"
        android:textColor="@color/gray"
        android:textSize="20sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:fontFamily="@font/bold"
            android:onClick="gotocreate"
            android:text="@string/register"
            android:textColor="@color/red"
            android:textSize="20sp" />
    </LinearLayout>

    </LinearLayout>
</RelativeLayout>